# smartcity

./: wrangler.jsonc
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  algorithms.h  backtrack.cpp  bellman.cpp  dijkstra.cpp  graph.h  server.cpp  traffic.cpp  traffic.h
frontend/: graph.js  index.html  script.js  style.css
